Closed Bug 755778 Opened 14 years ago Closed 14 years ago

[jsdbg2] Debugger.Environment.prototype.type never returns 'with'

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: jimb, Assigned: jimb)

References

Details

Attachments

(1 file)

According to the spec, the 'type' property of an environment for a 'with' statement is "with". However, the current implementation only ever returns "declarative" or "object"; 'with' statements get the latter.
Short and sweet.
Assignee: general → jimb
Status: NEW → ASSIGNED
Attachment #624408 - Flags: review?(jorendorff)
Comment on attachment 624408 [details] [diff] [review] Debugger.Environment.prototype.with should return "with" for 'with' statements' environments. Sweet. Thanks.
Attachment #624408 - Flags: review?(jorendorff) → review+
Flags: in-testsuite+
Target Milestone: --- → mozilla15
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: