Bug 755778: Debugger.Environment.prototype.with should return "with" for 'with' statements' environments. r=jorendorff